--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -14,9 +14,9 @@
             </p>
 
             <form action="{{url_for('predict')}}", method = "post">
-                <input type = "number" name="seconds" placeholder="Seconds" required="required" min="0" max ="60"/>
-                <input type="text" name = "latitude" placeholder="LAtitude" required="required" />
-                <input type="text" name = "longitude" placeholder="Longitude" required="required" />
+                <input type = "number" name="seconds" placeholder="Seconds" required="required" min="0" max ="60" id="seconds"/>
+                <input type="text" name = "latitude" placeholder="LAtitude" required="required" id="latitude"/>
+                <input type="text" name = "longitude" placeholder="Longitude" required="required" id="longitude"/>
                 <button type="submit" class="btn"> Predict UFO country </button>
 
 
